erDiagram

    Competencia ||--|{ Reglas: tiene
    Competencia ||--o{ Desafio: es_una
    Competencia ||--o{ RondaEliminacion: es_una
    Temporada ||--|{ Equipo: tiene
    Temporada ||--|{ Desafio: tiene
    Temporada ||--|{ RondaEliminacion: tiene
    Equipo ||--|{ Participante: tiene
    Participante }|--|| Pais: tiene
    Equipo ||--o{ Alianza: puede_tener
    Participante ||--|{ Habilidad: tiene
    
    Equipo{
        String nombre
        Participante participantes
        int puntos
    }
    Participante{
        String nombre
        String descripcion
        String apellido
        Pais pais
        Habilidad habilidad
        String apodo
    }
    Pais{
        String nombre
        String descripcion
    }
    Habilidad{
        String nombre
        String descripcion
    }
    Temporada{
        int numero
        String nombre
        String ganador
        Equipo Equipo
        Desafio Desafio
        RondaEliminacion RondaEliminacion
    }
    Competencia{
        String nombre
        String descripcion
        Equipo equipos
        Reglas Reglas
    }
    Desafio{
        int puntos
    }
    Reglas{
        String nombre
        String descripcion
    }
    RondaEliminacion{
        Equipo eliminado
    }
    Alianza{
        String nombre
        String descripcion
    }